transcribers section updated

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Gochi+Hand|Arvo:400,700' rel='stylesheet' type='text/css'>
 	<link href="%PUBLIC_URL%/css/jquery.bxslider.css" rel="stylesheet" />
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" />
 	<script src="%PUBLIC_URL%/js/tailwind.js"></script>
 
 </head>
