index.html updated

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   
   <div id="root"></div>
-  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="%PUBLIC_URL%/js/jquery.bxslider.min.js"></script>
 	<script type="text/javascript" src="%PUBLIC_URL%/js/jquery.placeholder.js"></script>
