--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+  <link href="http://fonts.cdnfonts.com/css/gochi-hand" rel="stylesheet">
   <title>Learncha</title>
   <script type="text/javascript">
     // const google_translate_element = document.querySelector('.google_translate_element');
