--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
   <link href="http://fonts.cdnfonts.com/css/gochi-hand" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap" rel="stylesheet">
   <title>Learncha</title>
   <script type="text/javascript">
     // const google_translate_element = document.querySelector('.google_translate_element');
