--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/awareness.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.css">
   <title>Learncha</title>
   <script type="text/javascript">
     // const google_translate_element = document.querySelector('.google_translate_element');
@@ -33,11 +36,50 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   
   <div id="root"></div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="%PUBLIC_URL%/js/jquery.bxslider.min.js"></script>
 	<script type="text/javascript" src="%PUBLIC_URL%/js/jquery.placeholder.js"></script>
 	<script type="text/javascript" src="%PUBLIC_URL%/js/main.js"></script>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script>
+    let typed = new Typed(".mov", {
+      strings: [
+        "What is climate change?",
+        'What are solutions to climate change?',
+        "Is climate change caused by humans?",
+        "What are the main threats of climate change?",
+        'How is climate change affecting animals?',
+        'How is climate change affecting people?',
+        'How much time do we have to stop climate change?',
+        'Is it hopeless to stop climate change?'
+      ],
+      typeSpeed: 100,
+      backSpeed: 50,
+      loop: true
+
+    })
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.esm.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
+  <script>
+    let smooth = new SmoothScroll('a[href*="#"]', {
+      speed: 1000,
+      speedAsDuration: true
+    });
+  </script>
+  <script type="text/javascript" src="%PUBLIC_URL%/js/awareness.js"></script>
+  <script type="text/javascript" src="%PUBLIC_URL%/js/locomotive.js"></script>
+  <script>
+    (function () {
+      let scroll = new LocomotiveScroll();
+    })();
+  </script>
+  
 </body>
 
 </html>
