--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
       loop: true
 
     })
+    console.log(typed)
   </script>
   <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.esm.js"></script>
