farex new update

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css" />
   <link rel="icon" href="%PUBLIC_URL%/images/logo-x2.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
@@ -77,6 +78,8 @@
   </script>
   <script type="text/javascript" src="%PUBLIC_URL%/js/awareness.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/js/locomotive.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
+  <script src="js/tailwindcss.js"></script>
   <script>
     (function () {
       let scroll = new LocomotiveScroll();
