--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/css/awareness.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.css">
   <title>Learncha</title>
-  <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" />
   <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
   <script type="text/javascript">
     // const google_translate_element = document.querySelector('.google_translate_element');
